# tink-firefly-endpoint

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
app/: main.py
app/redis/: redis.py
app/summary/: summary.py
app/utils/: csv_utils.py  fix_transactions.py  summary_utils.py  transaction_processor_utils.py  utils.py
tests/: test_main.py
tests/stubs/firefly/: account.json
tests/stubs/red_bank/: transaction_page.json
tests/stubs/tink/blue_bank/: transaction_page.json
tests/stubs/tink/red_bank/: accounts.json
