[tool.poetry]
name = "app"
version = "1.0.1"
description = "Pull transactions from Tink and export them in a CSV for Firefly"
authors = ["José Ignacio Amelivia Santiago <hello@namelivia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.1.0"
fastapi = "^0.115.13"
tink-http-python = "1.3.2"
gunicorn = "^23.0.0"
uvicorn = "^0.34.3"
httpx = "^0.28.1"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
pudb = "^2025.1"
codecov = "^2.1.13"
black = "^25.1.0"
pre-commit = "^4.2.0"
mock = "^5.2.0"

[tool.poetry.scripts]
scheduler = "scripts.scheduler:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
