[tool.poetry]
name = "app"
version = "1.3.6"
description = "Pull transactions from Tink and export them in a CSV for Firefly"
authors = ["José Ignacio Amelivia Santiago <hello@namelivia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.2.1"
fastapi = "^0.122.0"
tink-http-python = "1.4.1"
gunicorn = "^23.0.0"
uvicorn = "^0.38.0"
httpx = "^0.28.1"
jinja2 = "^3.1.6"
pyyaml = "^6.0.3"
redis = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pudb = "^2025.1"
codecov = "^2.1.13"
black = "^25.11.0"
pre-commit = "^4.4.0"
mock = "^5.2.0"

[tool.poetry.scripts]
scheduler = "scripts.scheduler:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
